fix padding to align height

--- a/src/components/molecules/plan/plan.scss
+++ b/src/components/molecules/plan/plan.scss
@@ -56,6 +56,7 @@
 
 		li:nth-child(1) {
 			background-color: $v_orange_bistre;
+			padding: 15px 0;
 		}
 	}
 }
